--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>02/12/16</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Tarek Chowdhury (man, 64)</b><br>Region of origin: <b>Bangladesh</b><br>Cause of death: <b>died in hospital after assault in Colnbrook removal centre (GB)</b><br>Source: Independent/PA<br>
+Found dead: <b>05/05/14</b><br>Number of person: <b>10</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Somalia, Syria, Eritrea</b><br>Cause of death: <b>missing after boat capsized in the Aegean Sea off coast of Samos (GR)</b><br>Source: SP/AP<br>
 
 <br>
 
