--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>05/05/14</b><br>Number of person: <b>10</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Somalia, Syria, Eritrea</b><br>Cause of death: <b>missing after boat capsized in the Aegean Sea off coast of Samos (GR)</b><br>Source: SP/AP<br>
+Found dead: <b>08/08/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>tortured by Turkish border guards near Al-Malikiyah (SY) while trying to cross Syrian-Turkish border</b><br>Source: SOHR/IOM<br>
 
 <br>
 
