--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>25/12/16</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Kurdistan</b><br>Cause of death: <b>stowaway, fell off truck he was hiding in at port of Dunkirk (FR) while trying to reach Great Britain</b><br>Source: TM/RT<br>
+Found dead: <b>03/08/08</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Mohammad Hussain (man, 36)</b><br>Region of origin: <b>Iraq</b><br>Cause of death: <b>died of cancer after medical neglect in Lindholme removal centre (GB)</b><br>Source: IRR<br>
 
 <br>
 
