--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>2010</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 babies)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>missing, feared drowned after boat sank off coast of Andalusia (ES)</b><br>Source: LV<br>
+Found dead: <b>05/02/04</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>stowaways, decomposing bodies found on cargo ship travelling from Ghana to Hull (GB)</b><br>Source: MET/IRR<br>
 
 <br>
 
