--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>10/11/07</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N. (1 woman; 2 men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>bodies found in the Alboran Sea near coast of Andalusia (ES)</b><br>Source: ABC/MUGAK/NOB<br>
+Found dead: <b>04/09/94</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Sellaiah Subathira</b><br>Region of origin: <b>Sri Lanka</b><br>Cause of death: <b>missing, reportedly drowned in the Neisse River near Zasieki (PL) close to Polish-German border</b><br>Source: ARI/Morgengr./ZAG<br>
 
 <br>
 
