--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Oct 98</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (woman)</b><br>Region of origin: <b>China</b><br>Cause of death: <b>died of heart failure while attempting to cross the Malše River into Austria from the Czech Republic</b><br>Source: IRR<br>
+Found dead: <b>23/08/14</b><br>Number of person: <b>10</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>missing, feared drowned in the Mediterranean Sea; 73 survived</b><br>Source: UNHCR<br>
 
 <br>
 
