--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>24/06/03</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N. (3 women)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>reportedly drowned near coast of Cádiz (ES)</b><br>Source: EP<br>
+Found dead: <b>23/03/08</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Abdi Daud (man, 40)</b><br>Region of origin: <b>Somalia</b><br>Cause of death: <b>given high dosages of cortisone in detention centre in Zurich (CH)</b><br>Source: NR/AugenAufCH<br>
 
 <br>
 
