--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>1999</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Cipriano I. M.</b><br>Region of origin: <b>Angola</b><br>Cause of death: <b>died after falling from tractor in Caspe (ES), undocumented worker</b><br>Source: IRR<br>
+Found dead: <b>27/06/02</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Somalia</b><br>Cause of death: <b>drowned after boat from Turkey to Kos (GR) sank near Datca (TR)</b><br>Source: VK/MNS/HRFT/IRR<br>
 
 <br>
 
