--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>18/09/12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (young man)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>reportedly fell overboard on way to Spain; body found off coast of the Spanish enclave of Ceuta (ES)</b><br>Source: ABC/FE<br>
+Found dead: <b>19/06/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Xue You Jie (man)</b><br>Region of origin: <b>China</b><br>Cause of death: <b>suffocated in sealed trailer of truck on ferry from Zeebrugge (BE) to Dover (GB)</b><br>Source: VK/Parool/DPA/AP/MUGAK/Reu./AP/NBK/NCADC<br>
 
 <br>
 
