--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>21/11/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Madina Hussini (girl, 6)</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>hit by train after Croatian border police forced her family back to Serbia in unsafe conditions</b><br>Source: USNews/IOM/AP/FoxNews<br>
+Found dead: <b>26/06/05</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Tunisia</b><br>Cause of death: <b>drowned after boat capsized near Dikili off coast of Turkey</b><br>Source: MNS/NOB<br>
 
 <br>
 
