--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>02/11/05</b><br>Number of person: <b>30</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>12 drowned after boat with 36 migrants capsized near Cesme (TR); 18 missing</b><br>Source: MNS/ST/Ya.N/KI/FE/NOB<br>
+Found dead: <b>12/01/12</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Bangladesh</b><br>Cause of death: <b>missing after 2 plastic boats capsized while trying to cross the Evros River from Turkey to Greece</b><br>Source: PICUM/ClandestinE/Infomob/TK/MNS<br>
 
 <br>
 
