--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>12/01/12</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Bangladesh</b><br>Cause of death: <b>missing after 2 plastic boats capsized while trying to cross the Evros River from Turkey to Greece</b><br>Source: PICUM/ClandestinE/Infomob/TK/MNS<br>
+Found dead: <b>19/03/09</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Salah Soudami (man, 42)</b><br>Region of origin: <b>Algeria</b><br>Cause of death: <b>reportedly beaten at Ponte Gallera detention centre in Rome (IT) after being denied medical treatment</b><br>Source: CARTA/ElW<br>
 
 <br>
 
