--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>29/08/04</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>stowaways, bodies found in 2 trucks in Cairo (EG) bound for Italy</b><br>Source: ANA<br>
+Found dead: <b>Dec 01</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>drowned trying to reach Greece from Turkey on a dinghy</b><br>Source: AFP<br>
 
 <br>
 
