--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>04/12/04</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (22; 23)</b><br>Region of origin: <b>Turkey</b><br>Cause of death: <b>blown up in minefield in Evros (GR) while trying to cross Turkish-Greek border</b><br>Source: PICUM/KI/MNS/NOB<br>
+Found dead: <b>07/02/12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (25)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died of hypothermia in health centre in Soufli (GR) after crossing the Evros River</b><br>Source: PICUM/Skai<br>
 
 <br>
 
