--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>04/07/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Samir Khedija (newborn)</b><br>Region of origin: <b>Eritrea</b><br>Cause of death: <b>died after mother fell from truck near Calais (FR), triggering premature delivery at 22 weeks</b><br>Source: GuardianUn./IBT<br>
+Found dead: <b>Jul 01</b><br>Number of person: <b>15</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>reportedly died after being forced to walk back and forth between Turkish-Greek border</b><br>Source: MNS<br>
 
 <br>
 
