--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>02/07/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Nicolae Doru (man, 37)</b><br>Region of origin: <b>Romania</b><br>Cause of death: <b>suicide, hanged himself in prison in Frosinone (IT) out of fear of deportation</b><br>Source: RIS<br>
+Found dead: <b>01/05/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Kabeya Dimuka Bijoux (man, 35)</b><br>Region of origin: <b>Congo</b><br>Cause of death: <b>died in Haslar removal centre in Gosport (GB) of injures sustained during arrest</b><br>Source: PORTS/ERB/IRR/NCADC<br>
 
 <br>
 
