--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>25/05/12</b><br>Number of person: <b>10</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Somalia</b><br>Cause of death: <b>missing after dinghy from Libya capsized near Siciliy</b><br>Source: LR/FE<br>
+Found dead: <b>23/04/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>died of hypothermia, travelling with other people by boat from Africa to Fuerteventura (ES)</b><br>Source: MC<br>
 
 <br>
 
