--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>01/05/01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Samson Chukwu (man, 27)</b><br>Region of origin: <b>Nigeria</b><br>Cause of death: <b>died under restraint during attempts to transport him from detention centre in Granges to Zurich Airport (CH)</b><br>Source: AugenAuf/CCSI/SOS-CH/BAZ/LeTemps/AI/MNS<br>
+Found dead: <b>13/06/95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Moses Ganaja (man, 30)</b><br>Region of origin: <b>Sudan</b><br>Cause of death: <b>suicide, hanged himself in deportation centre in Halle (DE)</b><br>Source: ProAsyl/ZAG<br>
 
 <br>
 
