--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>10/07/08</b><br>Number of person: <b>15</b><br>Name, gender, age: <b>N.N. (9 children)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>reportedly died of starvation, bodies found in Almería (ES)</b><br>Source: Nation/IntHeraldTribune/Ia/Picum/MSN/NOB<br>
+Found dead: <b>16/12/15</b><br>Number of person: <b>54</b><br>Name, gender, age: <b>N.N. (3 women)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>found dead in fishing boat off coast of Libya; 3,000 rescued</b><br>Source: Observer Gazette<br>
 
 <br>
 
