--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>26/10/03</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>drowned near Cádiz (ES) after small boat capsized on way to Spain</b><br>Source: EP<br>
+Found dead: <b>10/12/08</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Rezai Mahumut (boy, 13)</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>stowaway, run over by truck he'd been holding onto in Mestre, Venice (IT)</b><br>Source: CDS/ST/EpolisR/NOB<br>
 
 <br>
 
