--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>01/09/06</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N. (1 child; 2 adults)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>died following rescue after boat sank off El Hierro, Canary Islands (ES)</b><br>Source: ELM/FE/MNS/NOB/Rawstory/PICUM/APDHA<br>
+Found dead: <b>15/02/09</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Maghreb</b><br>Cause of death: <b>missing after boat crashed into rocks and sank near coast of Lanzarote (ES)</b><br>Source: Can7/ABC/Publico/ELM/DiariodeNoticias/Deia/EP<br>
 
 <br>
 
