--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Nov 09</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, ±30)</b><br>Region of origin: <b>Somalia</b><br>Cause of death: <b>died of swine flu due to lack of medical care in asylum centre in Norway</b><br>Source: UNHCR/IRR<br>
+Found dead: <b>25/01/04</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned after boat sank on way from Libya to Italy, found by coast guards</b><br>Source: NON/FORBES<br>
 
 <br>
 
