--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>25/11/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Sierra Leone</b><br>Cause of death: <b>body found floating near the Spanish enclave of Ceuta (ES), drowned trying to enter by water</b><br>Source: MNS<br>
+Found dead: <b>18/08/12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>body found in the Evros River (TR) after reportedly trying to cross into Greece from Turkey</b><br>Source: FE<br>
 
 <br>
 
