--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>17/01/16</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 33)</b><br>Region of origin: <b>India</b><br>Cause of death: <b>found frozen to death in car near Alakurtti (RUS) after waiting 5 days to cross border to Finland</b><br>Source: BarentsObs<br>
+Found dead: <b>15/04/00</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N. (1 woman; 1 pregnant w; 1 m)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned after boat sank near Canary Islands (ES)</b><br>Source: AFP/MNS/DiarioVasco/TAZ<br>
 
 <br>
 
