--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>28/09/94</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Romni Bukurjie Haliti (woman, 23)</b><br>Region of origin: <b>Kosovo (Roma)</b><br>Cause of death: <b>died in a fire caused by arson attack in refugee camp in Herford (DE)</b><br>Source: taz/Jelpke/CARF/ZDF/ARD/Berliner Ztg.<br>
+Found dead: <b>Jun 10</b><br>Number of person: <b>6</b><br>Name, gender, age: <b>N.N. (6 men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned after boat capsized while crossing the Evros River from Turkey, bodies found in Orestiada (GR)</b><br>Source: TimesM/Migreurop/AFP<br>
 
 <br>
 
