--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>16/11/16</b><br>Number of person: <b>96</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>missing after cargo boat carrying migrants drifted into the Strait of Siciily; 27 rescued</b><br>Source: TheHuff/ANSA/MSF/LR/STAMPA/Independent/BBC<br>
+Found dead: <b>16/08/99</b><br>Number of person: <b>60</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Kosovo (Roma)</b><br>Cause of death: <b>reportedly drowned in the Adriatic Sea while trying to reach Italy in small boat</b><br>Source: Romnews/Independent/Tampere Digest/Vita/LS<br>
 
 <br>
 
