--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>16/08/99</b><br>Number of person: <b>60</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Kosovo (Roma)</b><br>Cause of death: <b>reportedly drowned in the Adriatic Sea while trying to reach Italy in small boat</b><br>Source: Romnews/Independent/Tampere Digest/Vita/LS<br>
+Found dead: <b>03/12/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>electrocuted after climbing atop train at Greek-Macedonian border</b><br>Source: Mail Online/Reu./AFP/DW<br>
 
 <br>
 
