--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>03/12/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>electrocuted after climbing atop train at Greek-Macedonian border</b><br>Source: Mail Online/Reu./AFP/DW<br>
+Found dead: <b>Nov 06</b><br>Number of person: <b>18</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>bodies thrown overboard from boat travelling from Africa to Spain, boat saved by American ARC ship</b><br>Source: MNS/APDHA/YatchingWorld<br>
 
 <br>
 
